Fix MenuManager having duplicate instances...