@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.tnemc</groupId>
         <artifactId>TNML</artifactId>
-        <version>1.5.0.1-SNAPSHOT-6</version>
+        <version>1.5.0.1-SNAPSHOT-7</version>
     </parent>
 
     <artifactId>TNML-Sponge-API-7</artifactId>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>TNML-CORE</artifactId>
-            <version>1.5.0.1-SNAPSHOT-6</version>
+            <version>1.5.0.1-SNAPSHOT-7</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -88,9 +88,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
